Añadiendo mas rutas

--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -1,5 +1,4 @@
 div 
-
   //- Formas de agregar clases o ids
   //- h2.text-center Login
   //- h2(class="text-center") Login
@@ -7,7 +6,9 @@ div
   //- h2#text-center Login
 
   //- Formas de agregar variables
-  if  autenticado
-    p Usuario autenticado
-  else
-    p Inicia sesión
+  //- if  autenticado
+  //-   p Usuario autenticado
+  //- else
+  //-   p Inicia sesión
+
+  h2 Inicia Sesión
