Creando LAYOUT principal

--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -1,14 +1,18 @@
-div 
-  //- Formas de agregar clases o ids
-  //- h2.text-center Login
-  //- h2(class="text-center") Login
-  //- h2(id="text-center") Login
-  //- h2#text-center Login
+extends ../layout/index
 
-  //- Formas de agregar variables
-  //- if  autenticado
-  //-   p Usuario autenticado
-  //- else
-  //-   p Inicia sesión
+block contenido
 
-  h2.text-center Inicia Sesión
+  div 
+    //- Formas de agregar clases o ids
+    //- h2.text-center Login
+    //- h2(class="text-center") Login
+    //- h2(id="text-center") Login
+    //- h2#text-center Login
+
+    //- Formas de agregar variables
+    //- if  autenticado
+    //-   p Usuario autenticado
+    //- else
+    //-   p Inicia sesión
+
+    h2.text-center.text-2xl.font-extrabold Inicia Sesión
