--- a/views/auth/registro.pug
+++ b/views/auth/registro.pug
@@ -1,5 +1,10 @@
 extends ../layout/index
 
 block contenido
-  div
-    h2.text-center.text-2xl.font-extrabold Crea tu Cuenta
+  div.py-10
+    h1.text-4xl.my-10.font-extrabold.text-center Bienes
+      span.font-normal Raíces
+    h2.text-center.text-2xl.font-extrabold= pagina
+
+    //- Sino agregamos el DIV y solo ponemos la clase, automáticamente se crea el DIV
+    .mt-8
