--- a/views/auth/registro.pug
+++ b/views/auth/registro.pug
@@ -7,4 +7,22 @@ block contenido
     h2.text-center.text-2xl.font-extrabold= pagina
 
     //- Sino agregamos el DIV y solo ponemos la clase, automáticamente se crea el DIV
-    .mt-8
+    .mt-8.mx-auto.max-w-md
+      .bg-white.py-8.px-4.shadow
+        //- Esta clase, la del (FORM), afecta a los hijos directos, no a los nietos, en este caso los DIV
+        form.space-y-5 
+          div
+            label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="nombre") Tu Nombre
+            input#nombre.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu Nombre", type="text", name="nombre")
+
+          div
+            label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="email") Email de Registro
+            input#email.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu email", type="email", name="email")
+
+          div
+            label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="password") Password
+            input#password.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu password", type="password", name="password")
+          
+          div
+            label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="repetir_password") Repetir Password
+            input#repetir_password.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Repite tu password", type="password", name="repetir_password")
