--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -33,4 +33,8 @@ block contenido
             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="password") Password
             input#password.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu password", type="password", name="password")
 
+          div.flex.items-center.justify-between
+            a(href="/auth/registro" class="text-gray-500 text-xs ") ¿No tienes cuenta? Crea una 
+            a(href="/auth/olvide-password" class="text-gray-500 text-xs ") Olvide mi Password
+
           input(type="submit" value=pagina class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 cursor-pointer")
