--- a/views/auth/olvide-password.pug
+++ b/views/auth/olvide-password.pug
@@ -16,4 +16,8 @@ block contenido
             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="email") Email de Registro
             input#email.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu email", type="email", name="email")
 
+          div.flex.items-center.justify-between
+            a(href="/auth/login" class="text-gray-500 text-xs ") ¿Ya tienes una cuenta? Inicia Sesión 
+            a(href="/auth/registro" class="text-gray-500 text-xs ") ¿No tienes cuenta? Crea una 
+
           input(type="submit" value="Enviar instrucciones" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 cursor-pointer")
