--- a/views/auth/registro.pug
+++ b/views/auth/registro.pug
@@ -27,4 +27,8 @@ block contenido
             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="repetir_password") Repetir Password
             input#repetir_password.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Repite tu password", type="password", name="repetir_password")
 
+          div.flex.items-center.justify-between
+            a(href="/auth/login" class="text-gray-500 text-xs ") ¿Ya tienes una cuenta? Inicia Sesión 
+            a(href="/auth/olvide-password" class="text-gray-500 text-xs ") Olvide mi Password
+
           input(type="submit" value="Crear Cuenta" class="w-full bg-indigo-600 hover:bg-indigo-700 text-white font-bold py-3 cursor-pointer")
