--- a/views/auth/registro.pug
+++ b/views/auth/registro.pug
@@ -10,7 +10,7 @@ block contenido
     .mt-8.mx-auto.max-w-md
       .bg-white.py-8.px-4.shadow
         //- Esta clase, la del (FORM), afecta a los hijos directos, no a los nietos, en este caso los DIV
-        form.space-y-5 
+        form.space-y-5(method="POST" action="/auth/registro")
           div
             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="nombre") Tu Nombre
             input#nombre.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu Nombre", type="text", name="nombre")
