--- a/views/auth/registro.pug
+++ b/views/auth/registro.pug
@@ -6,6 +6,12 @@ block contenido
       span.font-normal Raíces
     h2.text-center.text-2xl.font-extrabold= pagina
 
+    if errores
+      div(class="max-w-md mx-auto mt-10")
+        each error in errores
+          p.bg-red-600.text-white.uppercase.text-xs.text-center.p-2.mb-1.font-bold= error.msg
+          
+
     //- Sino agregamos el DIV y solo ponemos la clase, automáticamente se crea el DIV
     .mt-8.mx-auto.max-w-md
       .bg-white.py-8.px-4.shadow
