--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -20,11 +20,18 @@ block contenido
       span.font-normal Raíces
     h2.text-center.text-2xl.font-extrabold= pagina
 
+    if errores
+      div(class="max-w-md mx-auto mt-10")
+        each error in errores
+          p.bg-red-600.text-white.uppercase.text-xs.text-center.p-2.mb-1.font-bold= error.msg
+
     //- Sino agregamos el DIV y solo ponemos la clase, automáticamente se crea el DIV
     .mt-8.mx-auto.max-w-md
       .bg-white.py-8.px-4.shadow
         //- Esta clase, la del (FORM), afecta a los hijos directos, no a los nietos, en este caso los DIV
-        form.space-y-5 
+        form.space-y-5(method="POST" novalidate action="/auth/login")
+          input(type="hidden" name="_csrf" value=csrfToken)
+
           div
             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="email") Email de Registro
             input#email.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Tu email", type="email", name="email")
