--- a/views/layout/index.pug
+++ b/views/layout/index.pug
@@ -6,5 +6,9 @@ html(lang="es")
     title Bienes Raíces | #{pagina}
     link(rel="stylesheet", href="/css/app.css")
   body.min-h-screen.bg-gray-50
+    //- Agregamos el HEADER
+    if barra
+      include header
+
     main(class="mx-auto container mt-10 px-2")
       block contenido
