--- a/views/propiedades/crear.pug
+++ b/views/propiedades/crear.pug
@@ -15,6 +15,17 @@ block contenido
           p.text-gray-600 Añade información general de la propiedad
 
           div
-            label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="tiulo") Título de anuncio
-            input#tiulo.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Título Propiedad, ej. Casa en la Playa", type="text", name="tiulo")
+            label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="titulo") Título de anuncio
+            input#titulo.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Título Propiedad, ej. Casa en la Playa", type="text", name="titulo")
+
+          div(class="md:flex md:gap-4 space-y-5 md:space-y-0")
+            div(class="md:w-1/2")
+              label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="categoria") Categoría
+              select#categoria.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="categoria")
+                option(value="") -- Seleccionar --
+
+            div(class="md:w-1/2")
+              label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="precio") Precio
+              select#precio.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(name="precio")
+                option(value="") -- Seleccionar --
       
