--- a/views/propiedades/crear.pug
+++ b/views/propiedades/crear.pug
@@ -53,4 +53,10 @@ block contenido
                 - var n = 1
                   while n < 5
                     option(value=n) #{n++}
-      
+
+//- leaflet: alternativa a GOOGLE MAPS, librería para mapas, Esri: librería que permite acceder a info de las calles cuando le pasas las coordenadas en conjunto de Geosearch
+block scripts
+  script(src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js")
+  script(src="https://unpkg.com/esri-leaflet@3.0.8/dist/esri-leaflet.js")
+  script(src="https://unpkg.com/esri-leaflet-geocoder@2.2.13/dist/esri-leaflet-geocoder.js")
+  script(src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-geosearch/2.7.0/bundle.min.js")
