--- a/views/propiedades/crear.pug
+++ b/views/propiedades/crear.pug
@@ -2,6 +2,8 @@ extends ../layout/index
 
 block styles
   link(rel="stylesheet", href="https://unpkg.com/leaflet@1.8.0/dist/leaflet.css")
+  //- Esri Leaflet Geocoder: permite buscar direcciones
+  link(rel="stylesheet", href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css") 
 
 block contenido
 
@@ -65,4 +67,6 @@ block scripts
   script(src="https://unpkg.com/esri-leaflet@3.0.8/dist/esri-leaflet.js")
   script(src="https://unpkg.com/esri-leaflet-geocoder@2.2.13/dist/esri-leaflet-geocoder.js")
   script(src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-geosearch/2.7.0/bundle.min.js")
+  script(src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js") //- complemento de Leaflet que permite buscar direcciones
+
   script(src="/js/mapa.js")
