--- a/views/propiedades/crear.pug
+++ b/views/propiedades/crear.pug
@@ -59,7 +59,18 @@ block contenido
                   while n < 5
                     option(value=n) #{n++}
 
-          #mapa.h-96
+          div.border-gray-200.border-t.py-5.space-y-5
+            h3.text-lg.leading-6.font-medium.text-gray-900 Ubicación
+            p.text-gray-600 Ubica la propiedad en el mapa
+
+            #mapa.h-96
+
+            div
+              p.calle
+
+              input(type="hidden", name="calle" id="calle")
+              input(type="hidden", name="lat" id="lat")
+              input(type="hidden", name="lng" id="lng")
 
 //- leaflet: alternativa a GOOGLE MAPS, librería para mapas, Esri: librería que permite acceder a info de las calles cuando le pasas las coordenadas en conjunto de Geosearch
 block scripts
