--- a/views/propiedades/crear.pug
+++ b/views/propiedades/crear.pug
@@ -22,6 +22,10 @@ block contenido
           div
             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="titulo") Título de anuncio
             input#titulo.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Título Propiedad, ej. Casa en la Playa", type="text", name="titulo")
+          
+          div
+            label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="descripcion") Descripción
+            input#descripcion.w-full.px-3.py-2.border.border-gray-300.rounded-md.placeholder-gray-400(placeholder="Descripción Propiedad, ej. Casa en la Playa", type="text", name="descripcion")
 
           div(class="md:flex md:gap-4 space-y-5 md:space-y-0")
             div(class="md:w-1/2")
