--- a/views/propiedades/crear.pug
+++ b/views/propiedades/crear.pug
@@ -68,7 +68,13 @@ block contenido
                 option(value="") -- Seleccionar --
                 - var n = 1
                   while n < 5
-                    option(value=n) #{n++}
+                    option(value=n
+                      selected= datos.habitaciones
+                                ? datos.habitaciones == n 
+                                  ? true 
+                                  : false
+                                : null 
+                    ) #{n++}
 
             div(class="md:w-1/3")
               label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="estacionamiento") Estacionamiento
@@ -76,7 +82,13 @@ block contenido
                 option(value="") -- Seleccionar --
                 - var n = 1
                   while n < 5
-                    option(value=n) #{n++}
+                    option(value=n
+                      selected= datos.estacionamiento
+                        ? datos.estacionamiento == n 
+                          ? true 
+                          : false
+                        : null 
+                    ) #{n++}
 
             div(class="md:w-1/3")
               label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="wc") Wc
@@ -84,7 +96,13 @@ block contenido
                 option(value="") -- Seleccionar --
                 - var n = 1
                   while n < 5
-                    option(value=n) #{n++}
+                    option(value=n
+                      selected= datos.wc
+                        ? datos.wc == n 
+                          ? true 
+                          : false
+                        : null 
+                    ) #{n++}
 
           div.border-gray-200.border-t.py-5.space-y-5
             h3.text-lg.leading-6.font-medium.text-gray-900 Ubicación
