--- a/views/propiedades/agregar-imagen.pug
+++ b/views/propiedades/agregar-imagen.pug
@@ -11,7 +11,7 @@ block contenido
     h2.text-center.text-2xl.font-extrabold= pagina
 
     div(class="bg-white shadow py-8 px-4 rounded mx-auto max-w-4xl my-10 md:px-10")
-      form(class="dropzone border-dashed border-2 w-full min:h-96 h-auto rounded flex-col justify-center items-center" action="/propiedades/crear", method="POST")
+      form(id="imagen" class="dropzone border-dashed border-2 w-full min:h-96 h-auto rounded flex-col justify-center items-center" action=`/propiedades/agregar-imagen/${propiedad.id}`, method="POST")
         input(type="hidden", name="_csrf", value= csrfToken)
           
       input(class="mt-5 w-full py-3 bg-indigo-600 hover:bg-indigo-700 rounded text-white font-bold uppercase cursor-pointer" type="submit", value="Publicar Propiedad")
