--- a/views/propiedades/admin.pug
+++ b/views/propiedades/admin.pug
@@ -8,3 +8,5 @@ block contenido
     h2.text-center.text-2xl.font-extrabold= pagina
 
     a(href="/propiedades/crear", class="rounded py-2 px-10 bg-indigo-600 hover:bg-indigo-600 text-sm font-bold text-center text-white uppercase my-5 inline-block w-full sm:w-auto") Publicar Propiedad 
+
+    pre= JSON.stringify(propiedades, undefined, 2)
