--- a/views/propiedades/admin.pug
+++ b/views/propiedades/admin.pug
@@ -9,4 +9,10 @@ block contenido
 
     a(href="/propiedades/crear", class="rounded py-2 px-10 bg-indigo-600 hover:bg-indigo-600 text-sm font-bold text-center text-white uppercase my-5 inline-block w-full sm:w-auto") Publicar Propiedad 
 
-    pre= JSON.stringify(propiedades, undefined, 2)
+    //- Sirve para ver la información que se está enviando a la vista 
+    //- pre= JSON.stringify(propiedades, undefined, 2)
+
+    if propiedades
+      
+    else
+      p.text-cemter No hay propiedades aún...
