--- a/views/propiedades/admin.pug
+++ b/views/propiedades/admin.pug
@@ -12,7 +12,15 @@ block contenido
     //- Sirve para ver la información que se está enviando a la vista 
     //- pre= JSON.stringify(propiedades, undefined, 2)
 
-    if propiedades
-      
+    if propiedades.length
+      div(class="bg-white shadow rounded-lg")
+        ul(class="divide-y divide-gray-200")
+          each propiedad in propiedades
+            li(class="p-3 flex items-center")
+              div(class="p-6 w-full flex flex-col sm:flex-row sm:items-center sm:justify-between space-y-8 gap-4")
+                div(class="sm:w-1/4 md:w-1/6")
+                  img(class="", src=`/uploads/${propiedad.imagen}`, alt=`Imagen de la propiedad ${propiedad.titulo}`)
+                div(class="sm:w-2/4 md:w-3/6 lg:w-4/6")
+                div(class="sm:w-1/4 md:w-2/6 lg:w-1/6")
     else
       p.text-cemter No hay propiedades aún...
