--- a/views/propiedades/admin.pug
+++ b/views/propiedades/admin.pug
@@ -23,7 +23,8 @@ block contenido
                 div(class="sm:w-2/4 md:w-3/6 lg:w-4/6")
                   //- truncate = si el texto es muy largo, lo corta y agrega "..."
                   a(class=" block text-2xl font-extrabold text-indigo-600 truncate" href="")=propiedad.titulo
-                  p(class="")=propiedad.categoriaId
+                  //- p(class="text-sm text-black font-bold")=propiedad.categoriaId
+                  p(class="text-sm text-black font-bold")=propiedad.categoria.nombre
                 div(class="sm:w-1/4 md:w-2/6 lg:w-1/6")
     else
       p.text-cemter No hay propiedades aún...
