Mostrando el PRECIO

--- a/views/propiedades/admin.pug
+++ b/views/propiedades/admin.pug
@@ -25,6 +25,7 @@ block contenido
                   a(class=" block text-2xl font-extrabold text-indigo-600 truncate" href="")=propiedad.titulo
                   //- p(class="text-sm text-black font-bold")=propiedad.categoriaId
                   p(class="text-sm text-black font-bold")=propiedad.categoria.nombre
+                  p(class="text-sm text-black font-bold")=propiedad.precio.nombre
                 div(class="sm:w-1/4 md:w-2/6 lg:w-1/6")
     else
       p.text-cemter No hay propiedades aún...
