--- a/views/propiedades/admin.pug
+++ b/views/propiedades/admin.pug
@@ -17,15 +17,20 @@ block contenido
         ul(class="divide-y divide-gray-200")
           each propiedad in propiedades
             li(class="p-3 flex items-center")
-              div(class="p-6 w-full flex flex-col sm:flex-row sm:items-center sm:justify-between space-y-8 gap-4")
+              div(class="p-6 w-full flex flex-col sm:flex-row sm:items-center sm:justify-between space-y-8 md:space-y-0 gap-4")
                 div(class="sm:w-1/4 md:w-1/6")
                   img(class="w-full block", src=`/uploads/${propiedad.imagen}`, alt=`Imagen de la propiedad ${propiedad.titulo}`)
-                div(class="sm:w-2/4 md:w-3/6 lg:w-4/6")
+                div(class="sm:w-2/4 md:w-3/6 lg:w-4/6 space-y-3")
                   //- truncate = si el texto es muy largo, lo corta y agrega "..."
                   a(class=" block text-2xl font-extrabold text-indigo-600 truncate" href="")=propiedad.titulo
                   //- p(class="text-sm text-black font-bold")=propiedad.categoriaId
                   p(class="text-sm text-black font-bold")=propiedad.categoria.nombre
-                  p(class="text-sm text-black font-bold")=propiedad.precio.nombre
+                  p(class="text-sm text-gray-500 font-bold flex items-center")
+                    svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6")
+                      path(stroke-linecap="round" stroke-linejoin="round" d="M12 6v12m-3-2.818.879.659c1.171.879 3.07.879 4.242 0 1.172-.879 1.172-2.303 0-3.182C13.536 12.219 12.768 12 12 12c-.725 0-1.45-.22-2.003-.659-1.106-.879-1.106-2.303 0-3.182s2.9-.879 4.006 0l.415.33M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z")
+                    =propiedad.precio.nombre
+
+                  //- p(class="text-sm text-black font-bold")=propiedad.precio.nombre
                 div(class="sm:w-1/4 md:w-2/6 lg:w-1/6")
     else
       p.text-cemter No hay propiedades aún...
