--- a/views/propiedades/editar.pug
+++ b/views/propiedades/editar.pug
@@ -19,12 +19,12 @@ block contenido
 
     //- .space-y-8 = da espacio entre los elementos hijo 
     div(class="bg-white shadow py-8 px-4 rounded mx-auto max-w-4xl my-10 md:px-10")
-      form.space-y-8(action="/propiedades/editar", method="POST")
+      form.space-y-8(method="POST")
         input(type="hidden", name="_csrf", value= csrfToken)
         
         div.space-y-5
           h3.text-lg.leading-6.font-medium.text-gray-900 Información General
-          p.text-gray-600 Añade información general de la propiedad
+          p.text-gray-600 Actualiza la información general de la propiedad
 
           div
             label.block.text-sm.uppercase.text-gray-500.mb-2.font-bold(for="titulo") Título de anuncio
