--- a/views/propiedades/admin.pug
+++ b/views/propiedades/admin.pug
@@ -22,7 +22,7 @@ block contenido
                   img(class="w-full block", src=`/uploads/${propiedad.imagen}`, alt=`Imagen de la propiedad ${propiedad.titulo}`)
                 div(class="sm:w-2/4 md:w-3/6 lg:w-4/6 space-y-3")
                   //- truncate = si el texto es muy largo, lo corta y agrega "..."
-                  a(class="block text-2xl font-extrabold text-indigo-600 truncate" href="")=propiedad.titulo
+                  a(class="block text-2xl font-extrabold text-indigo-600 truncate" href=`/propiedad/${propiedad.id}`)=propiedad.titulo
                   //- p(class="text-sm text-black font-bold")=propiedad.categoriaId
                   p(class="text-sm text-black font-bold")=propiedad.categoria.nombre
                   p(class="text-sm text-gray-500 font-bold flex items-center")
