--- a/views/propiedades/mostrar.pug
+++ b/views/propiedades/mostrar.pug
@@ -34,4 +34,13 @@ block contenido
             p(class="text-gray-600 font-bold text-xs") Precio
               span(class="text-gray-800 block text-lg")= propiedad.precio.nombre
 
-      div(class="md:w-1/3") 2
+      div(class="md:w-1/3")
+        h3(class="text-center py-10 leading-6 text-2x font-bold text-gray-900") Ubicación
+
+        div(class="h-96" id="mapa")
+          p(id="lat" class="hidden")= propiedad.lat
+          p(id="lng" class="hidden")= propiedad.lng
+
+        div(class="p-5")
+          p(class="text-gray-600 font-bold text-xs") Dirección
+            span(class="text-gray-800 block text-lg")= propiedad.calle
