Primeros pasos para mostrar un MAPA

--- a/views/inicio.pug
+++ b/views/inicio.pug
@@ -6,8 +6,13 @@ block styles
   link(rel="stylesheet", href="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.css") 
 
 block contenido
+  div(class="py-5")
+    h1(class="text-center text-4xl font-extrabold") Ubicación en el Mapa
 
-
+    //- Quiere decir que usará toda la altura y agregará 600px
+    div(id="mapa-inicio" class="h-[600px] mt-5")
 
 block scripts
   script(src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js")
+  script(src="https://unpkg.com/leaflet-control-geocoder/dist/Control.Geocoder.js")
+  script(src="/js/mapaInicio.js")
