--- a/public/css/app.css
+++ b/public/css/app.css
@@ -593,8 +593,11 @@ video {
 .h-auto {
   height: auto;
 }
-.h-24 {
-  height: 6rem;
+.h-\[\] {
+  height: ;
+}
+.h-\[600px\] {
+  height: 600px;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -724,6 +727,10 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(79 70 229 / var(--tw-bg-opacity, 1));
 }
+.bg-indigo-700 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(67 56 202 / var(--tw-bg-opacity, 1));
+}
 .bg-indigo-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(55 48 163 / var(--tw-bg-opacity, 1));
@@ -747,10 +754,6 @@ video {
 .bg-yellow-100 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 249 195 / var(--tw-bg-opacity, 1));
-}
-.bg-indigo-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(67 56 202 / var(--tw-bg-opacity, 1));
 }
 .p-2 {
   padding: 0.5rem;
