--- a/views/inicio.pug
+++ b/views/inicio.pug
@@ -33,7 +33,24 @@ block contenido
     section(class="py-5")
       h2(class="text-center text-4xl font-extrabold pt-10") Casas en Venta
 
-      pre= JSON.stringify(casas, null, 2)
+      //- pre= JSON.stringify(casas, null, 2)
+      div(class="grid grid-cols-1 lg:grid-cols-3 gap-5 mt-14")
+        each casa in casas
+          div(class="bg-white shadow rounded-lg")
+            img(src=`/uploads/${casa.imagen}`, alt=`Imagen casa: ${casa.titulo}` class="object-cover h-72 w-full")
+
+            div(class="p-5 space-y-3")
+              h3(class="text-2xl font-bold")= casa.titulo
+
+              p(class="text-sm text-gray-600") Habitaciones:
+                span(class="text-gray-800 font-bold")= casa.habitaciones
+              p(class="text-sm text-gray-600") WC:
+                span(class="text-gray-800 font-bold")= casa.wc
+              p(class="text-sm text-gray-600") Precio:
+                span(class="text-gray-800 font-bold")= casa.precio.nombre
+
+              a(href=`/propiedad/${casa.id}` class="bg-indigo-600 w-full text-center block font-bold text-white p-2 uppercase rounded") Ver Propiedad
+
 
 block scripts
   script(src="https://unpkg.com/leaflet@1.8.0/dist/leaflet.js")
