--- a/views/propiedades/mostrar.pug
+++ b/views/propiedades/mostrar.pug
@@ -54,8 +54,15 @@ block contenido
             h3(class="text-2xl text-center my-10 font-extrabold text-gray-900") Vendedor
 
             if usuario
-              p Puedes enviar mensaje
-              
+              form(method="POST")
+                input(type="hidden" name="_csrf" value=csrfToken) 
+
+                div(class="space-y-5")
+                  label(for="mensaje") Mensaje
+                  textarea(name="mensaje" id="mensaje" class="w-full py-2 border border-gray-300 rounded-lg shadow placeholder-gray-50" placeholder="Coloca tu mensaje aquí") 
+
+                  input(type="submit" value="Enviar Mensaje" class="bg-indigo-600 text-white font-bold uppercase text-sm w-full p-2 cursor-pointer")
+
             else
               div(class="flex flex-col items-center justify-center gap-2")
                 p(class="text-center") Si deseas contactar al vendedor
